syntax = "proto3";
package rarimo.rarimocore.rarimocore;

option go_package = "github.com/rarimo/rarimo-core/x/rarimocore/types";

message UnfreezeSignerPartyProposal {
  string title = 1;
  string description = 2;
  string account = 3;
}

message ReshareKeysProposal {
  string title = 1;
  string description = 2;
}

message SlashProposal {
  string title = 1;
  string description = 2;
  string party = 3;
}

message DropPartiesProposal {
  string title = 1;
  string description = 2;
}